# BabyGervaise

./: .gitattributes  .gitignore  GERVAISE_PRODUCT_LAWS.md  GERVAISE_VISION_REVISED.md  baby_gervaise_architecture.md  baby_gervaise_master_build_prompt.md  baby_gervaise_prd.md
android/: gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/ui/: index.html
android/app/src/main/java/io/gervaise/babygervaise/: AssetConfigInstaller.kt  MainActivity.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/bridge/: build.gradle.kts
android/bridge/src/main/java/io/gervaise/babygervaise/bridge/: NativeBabyGervaise.kt  WebAppBridge.kt  WebEventDispatcher.kt
android/bridge/src/test/java/io/gervaise/babygervaise/bridge/: WebAppBridgeTest.kt
config/: app_config.json  model_config.json  prompt_config.json
rust_core/: Cargo.toml
rust_core/src/: hgie.rs  lib.rs  logging.rs  memory.rs  model.rs  tools.rs
rust_core/tests/: core_integration.rs
scripts/: build-android-rust.sh
ui_web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui_web/src/: app.test.tsx  app.tsx  bridge.ts  main.tsx  styles.css  types.ts
